# nathan-rtech

./: .gitmodules  README.md  Untitled Document 1
src/: commands_turtlebot3  mymap.pgm  params.yaml
src/beginner_tutorials/: package.xml
src/beginner_tutorials/src/: add_two_ints_server.cpp
src/dual_manipulator_sia5_ur5_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_manipulator_sia5_ur5_config/config/: fake_controllers.yaml  kinematics.yaml  motoman_sia5d.srdf  ompl_planning.yaml
src/dual_manipulator_sia5_ur5_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/dual_manipulator_support/: package.xml
src/dual_manipulator_support/urdf/: dual_manipulator_sia5_ur5.xacro
src/dual_sia5_moveit_config/: .setup_assistant  package.xml
src/motoman_sia5d_moveit_config/: .setup_assistant  package.xml
src/my_r2d2/: package.xml
src/planning_tutorial/: CMakeLists.txt  package.xml
src/range_visualizer/: CMakeLists.txt  Untitled Document  package.xml
src/spider_bot/: CMakeLists.txt  README  package.xml
src/spider_bot/config/: spider.rviz
src/spider_bot/launch/: spider_bot.launch
src/spider_bot/src/: client.cpp  server.cpp
src/spider_bot/xacro/: spider.xacro
(+12 files in other folders)
